get user by id is added
